--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,65 @@
 /VehicleTestDrive/CustomersApi/bin
 *.dll
 */obj
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db-shm
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db-wal
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/SemanticSymbols.db-shm
+VehicleTestDrive/.vs/VehicleTestDrive/FileContentIndex/49b89363-50b3-4c43-a62b-64672c0d0860.vsidx
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.AssemblyInfo.cs
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.AssemblyInfoInputs.cache
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.assets.cache
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.AssemblyInfo.cs
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.AssemblyInfoInputs.cache
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.assets.cache
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.csproj.AssemblyReference.cache
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.AssemblyInfo.cs
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.AssemblyInfoInputs.cache
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.assets.cache
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.AssemblyInfo.cs
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.AssemblyInfoInputs.cache
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.assets.cache
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.csproj.AssemblyReference.cache
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.AssemblyInfo.cs
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.AssemblyInfoInputs.cache
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.assets.cache
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/VehiclesApi/obj/project.assets.json
+VehicleTestDrive/VehiclesApi/obj/project.nuget.cache
+VehicleTestDrive/VehiclesApi/obj/VehiclesApi.csproj.nuget.dgspec.json
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db-shm
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/CodeChunks.db-wal
+VehicleTestDrive/.vs/VehicleTestDrive/CopilotIndices/17.12.38.29086/SemanticSymbols.db-shm
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.AssemblyInfo.cs
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.AssemblyInfoInputs.cache
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.assets.cache
+VehicleTestDrive/ApiGateway/obj/Debug/net8.0/ApiGateway.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.AssemblyInfo.cs
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.AssemblyInfoInputs.cache
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.assets.cache
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.csproj.AssemblyReference.cache
+VehicleTestDrive/CustomersServiceAPI/obj/Debug/net8.0/CustomersServiceAPI.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.AssemblyInfo.cs
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.AssemblyInfoInputs.cache
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.assets.cache
+VehicleTestDrive/MessageBroker/obj/Debug/net8.0/MessageBroker.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.AssemblyInfo.cs
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.AssemblyInfoInputs.cache
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.assets.cache
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.csproj.AssemblyReference.cache
+VehicleTestDrive/ReservationsApi/obj/Debug/net8.0/ReservationsApi.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.AssemblyInfo.cs
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.AssemblyInfoInputs.cache
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.assets.cache
+VehicleTestDrive/VehiclesApi/obj/Debug/net8.0/VehiclesApi.GeneratedMSBuildEditorConfig.editorconfig
+VehicleTestDrive/VehiclesApi/obj/project.assets.json
+VehicleTestDrive/VehiclesApi/obj/project.nuget.cache
+VehicleTestDrive/VehiclesApi/obj/VehiclesApi.csproj.nuget.dgspec.json
+*.cache
+*.cache
